--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,23 +26,30 @@
         </div>
         <div class="col-9 overflow-auto" style="height:690px;">
             <div class="row ">
-                <img src="/img/bannerblog.png" style="height: 150px" alt="" />
-            </div>
-            <div class="row g-2 mt-2" id="DanhSach">
-                <div class="col-3">
-                    <div class="card border-0 shadow-sm">
-                        <img src="/img/anhbia1.jpg" class="card-img-top" style="height: 200px; object-fit: cover;" alt="Sách">
-                        <div class="card-body text-center">
-                            <h5 class="card-title">Tên sách</h5>
-                            <p class="card-text text-muted">Giá: 100.000 VND</p>
-                            <a href="#" class="btn btn-primary">Mua ngay</a>
+                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="/img/bannerblog.png" class="d-block w-100" style="height:150px">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/banner2.webp" class="d-block w-100" style="height:150px">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="/img/banner3.webp" class="d-block w-100" style="height:150px">
                         </div>
                     </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
                 </div>
-
-
-
-
+            </div>
+            <div class="row g-2 mt-2" id="DanhSach">
+               
             </div>
 
         </div>
@@ -51,5 +58,37 @@
 <div class="container-fluid mt-3 bg-dark" style="height:33px">
     <p class="text-center text-white">Coding by aKdev - github: AnhKhoa24</p>
 </div>
+
+
+
+
+<!-- Modal -->
+<div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered modal-custom">
+        <!-- Thêm class modal-dialog-centered và modal-custom -->
+        <div class="modal-content">
+            <div class="modal-header">
+                @* <h5 class="modal-title" id="productModalLabel">Chi Tiết Sản Phẩm</h5> *@
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="text-center">
+                    <img src="/img/anhbia1.jpg" class="img-fluid mb-3" alt="Sản phẩm" style="max-height: 300px; object-fit: cover;">
+                </div>
+                <h6 class="text-center" id="productName" class="fw-bold">Tên Sản Phẩm</h6>
+                <p class="text-center" id="productPrice" class="text-success">Giá: 1,000,000 VND</p>
+                <p id="productDescription">Mô tả: Đây là mô tả chi tiết về sản phẩm.</p>
+                <p id="productQuantity">Số lượng còn lại: <span class="fw-bold">10</span></p>
+            </div>
+            <div class="modal-footer" id="nutthemmodal">
+               
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+
 <script src="~/js/index.js"></script>
 
