--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿
 
-<div class="container mt-3">
+<div class="container">
     <div class="row">
-        <div class="col-3 overflow-auto" style="height:690px;">
+        <div class="col-3 overflow-auto" style="height:680px;">
             <span class="fs-2">Chủ đề sách</span>
             <table id="chuDe" class="table table-bordered table-hover mt-2">
                 @foreach (var item in ViewBag.ChuDes)
@@ -24,7 +24,7 @@
             </table>
 
         </div>
-        <div class="col-9 overflow-auto" style="height:690px;">
+        <div class="col-9 overflow-auto" style="height:680px;">
             <div class="row ">
                 <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
@@ -55,7 +55,7 @@
         </div>
     </div>
 </div>
-<div class="container-fluid mt-3 bg-dark" style="height:33px">
+<div class="container-fluid mt-3 bg-dark" style="height:26px">
     <p class="text-center text-white">Coding by aKdev - github: AnhKhoa24</p>
 </div>
 
